--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
 					{% if session['login_ok'] %}
 						<li><a href="/logout">退出登录</a></li>
 						{% if session['auth']==1 %}
-						<li><a href="/finalbuy">抢购商品</a></li>
+						<li><a href="/finalpro">抢购商品</a></li>
 						{%endif%}
 						<li><a href="/histo">历史订单</a></li>
 						<li>{{session["isim"]}}</li>
