--- a/templates/lost.html
+++ b/templates/lost.html
@@ -11,7 +11,7 @@ LOST - Diagon Alley
 <div class="home" style="height:200px;">
 			<div class="home_container d-flex flex-column align-items-center justify-content-end">
 				<div class="home_content text-center">
-					<div class="home_title">OPSSSSSS!...</div>
+					<div class="home_title">ERROR Found! </div>
 				</div>
 			</div>
 		</div>
@@ -21,7 +21,7 @@ LOST - Diagon Alley
 				<div class="row">
                     <div class="col-lg-12">
 						<div class="billing">
-							<div class="checkout_title text-center">页面走丢了</div>
+							<div class="checkout_title text-center">你的操作不正确，请重试</div>
 								<a href="/"><button type="submit" class="btn btn-success col-md-12 checkout_button trans_200" style="border:0px;">返回主页</button></a>
 							</div>
 						</div>
