增加EXP & 增加提示 & 修复finalpro不能post的问题

--- a/DiagonAlley/templates/layout.html
+++ b/DiagonAlley/templates/layout.html
@@ -100,7 +100,8 @@
 										</a>		
 									</div>
 									<div class="footer_about_text">
-										<p>This is a hint.</p>
+										<p>True is better than true.</p>
+										<p>Only the privileged get what they deserve.</p>
 									</div>
 								</div>
 							</div>
