--- a/DiagonAlley/templates/product.html
+++ b/DiagonAlley/templates/product.html
@@ -21,6 +21,7 @@
 				<div class="row">
 					
 					<!-- Product Image -->
+					<!-- PixelJihad -->
 					<div class="col-lg-6">
 						<div class="product_image_slider_container">
 							<div id="slider" class="flexslider">
