--- a/DiagonAlley/templates/layout.html
+++ b/DiagonAlley/templates/layout.html
@@ -54,7 +54,7 @@
 					<ul>
 					{% if session['login_ok'] %}
 						<li><a href="/logout">退出登录</a></li>
-						{% if session['auth']==1 %}
+						{% if session['auth']=='yF\x1a\xee\xa5\xdbG\xe2\xf77\xac\xe8\x01\x13sm' %}
 						<li><a href="/finalpro">抢购商品</a></li>
 						{%endif%}
 						<li><a href="/histo">历史订单</a></li>
